fix: fix slides visible on big slider

--- a/sourse/pug/blocks/sSlider/_sSlider.scss
+++ b/sourse/pug/blocks/sSlider/_sSlider.scss
@@ -11,6 +11,10 @@
   }
   .swiper-horizontal {
     overflow: visible;
+    @include media-breakpoint-up(md) {
+      padding-bottom: rem(50);
+      overflow: hidden;
+    }
   }
   &__slider-count {
     text-align: end;
@@ -42,7 +46,7 @@
     padding-right: rem(43);
     --swiper-pagination-bottom: #{rem(-37)};
     @include media-breakpoint-up(md) {
-      --swiper-pagination-bottom: #{rem(-56)};
+      --swiper-pagination-bottom: #{rem(-4)};
     }
     span {
       font-size: rem(14);
@@ -82,7 +86,7 @@
       content: none;
     }
     @include media-breakpoint-up(md) {
-      top: calc(100% + 40px);
+      top: calc(100% - 10px);
       right: 107px;
     }
   }
@@ -99,7 +103,7 @@
       content: none;
     }
     @include media-breakpoint-up(md) {
-      top: calc(100% + 40px);
+      top: calc(100% - 11px);
     }
   }
 
